@@ -442,6 +442,19 @@ arangodb::Result sendRestoreCollection(arangodb::httpclient::SimpleHttpClient& h
     newOptions.add(arangodb::StaticStrings::ReplicationFactor, VPackValue(replicationFactor));
   }
   newOptions.add(arangodb::StaticStrings::NumberOfShards, VPackValue(getNumberOfShards(options, parameters)));
+
+  // enable revision trees for the collection if the parameters are not set
+  // (likely a collection from the pre-3.8 era)
+  if (options.enableRevisionTrees) {
+    if ((parameters.get(arangodb::StaticStrings::SyncByRevision).isNone() ||
+         parameters.get(arangodb::StaticStrings::SyncByRevision).isTrue()) &&
+        (parameters.get(arangodb::StaticStrings::UsesRevisionsAsDocumentIds).isNone() ||
+         parameters.get(arangodb::StaticStrings::UsesRevisionsAsDocumentIds).isTrue())) {
+      newOptions.add(arangodb::StaticStrings::SyncByRevision, VPackValue(true));
+      newOptions.add(arangodb::StaticStrings::UsesRevisionsAsDocumentIds, VPackValue(true));
+    }
+  }
+
   newOptions.close();
 
   VPackBuilder b;
@@ -1625,6 +1638,11 @@ void RestoreFeature::collectOptions(std::shared_ptr<options::ProgramOptions> opt
 
   options->addOption("--continue", "continue restore operation",
                      new BooleanParameter(&_options.continueRestore));
+  
+  options->addOption("--enable-revision-trees",
+                     "enable revision trees for new collections if the collection attributes 'syncByRevision' and 'usesRevisionsAsDocumentIds' are missing",
+                     new BooleanParameter(&_options.enableRevisionTrees))
+                     .setIntroducedIn(30807);
   
   options->addOption("--envelope", "wrap each document into a {type, data} envelope "
                      "(this is required from compatibility with v3.7 and before)",
