@@ -1,6 +1,16 @@
 v3.8.7 (XXXX-XX-XX)
 -------------------
 
+* Added option `--enable-revision-trees` to arangorestore, which will add the 
+  attributes `syncByRevision` and `usesRevisionsAsDocumentIds` to the 
+  collection structure if they are missing. As a consequence, these collections
+  created by arangorestore will be able to use revision trees and a faster
+  getting-in-sync procedure after a restart. The option defaults to `true`,
+  meaning the attributes will be added if they are missing. If the option is
+  set to `false`, the attributes will not be added to the collection structure.
+  If the attributes are already present in the dump data, they will not be 
+  modified by arangorestore irrespective of the setting of this option.
+
 * Bump the number of RocksDB transaction lock stripes to at least 16, if the
   number of cores is lower than that value.
 
